header and intro

--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html>
-<title>Enrico Strangio | Computer Engineer</title>
+
+<head>
+    <title>Enrico Strangio | Computer Engineer</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+
+</head>
 
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <div class="container">
+        <header>
+            <a href="/">
+                <h1 class="logo">ENRICO STRANGIO</h1>
+            </a>
+            <nav>
+
+                <a href="/info">Information</a>
+                <a href="/posts">Thoughts</a>
+                <a href="/contact">Contact</a>
+                <a href="/CV">CV</a>
+
+            </nav>
+        </header>
+        <main>
+            <section class="intro">
+                <h1>Ciao, I'm Enrico.
+                    <span id="subtitle">A computer engineer based in Bologna, Italy.</span>
+                </h1>
+                <p>
+                    About to graduate in Computer Engineering. I'm passionate about technology and will soon pursue a
+                    master's in Artificial Intelligence.
+                    This website showcases my skills and projects.
+                </p>
+                <a class="button">
+                    More Info
+                </a>
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
