--- a/index.html
+++ b/index.html
@@ -18,30 +18,42 @@
                 <h1 class="logo">ENRICO STRANGIO</h1>
             </a>
             <nav>
+                <ul class="nav-links">
+                    <li><a href="/info">Information</a></li>
+                    <li><a href="/posts">Thoughts</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/CV">CV</a></li>
+                </ul>
 
-                <a href="/info">Information</a>
-                <a href="/posts">Thoughts</a>
-                <a href="/contact">Contact</a>
-                <a href="/CV">CV</a>
+                <div class="menu-icon">
+                    <a href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 9h16.5m-16.5 6.75h16.5" />
+                        </svg>
+                    </a>
+                </div>
 
             </nav>
         </header>
         <main>
             <section class="intro">
-                <h1>Ciao, I'm Enrico.
+                <h1>Ciao! I'm Enrico.
                     <span id="subtitle">A computer engineer based in Bologna, Italy.</span>
                 </h1>
                 <p>
+
                     About to graduate in Computer Engineering. I'm passionate about technology and will soon pursue a
                     master's in Artificial Intelligence.
                     This website showcases my skills and projects.
                 </p>
-                <a class="button">
+                <a href="/info" class="button">
                     More Info
                 </a>
             </section>
         </main>
     </div>
 </body>
+
 
 </html>
