--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enrico Strangio | Computer Engineer</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
-
+    
 </head>
 
 <body>
@@ -18,11 +20,11 @@
                 <h1 class="logo">ENRICO STRANGIO</h1>
             </a>
             <nav>
-                <ul class="nav-links">
-                    <li><a href="/info">Information</a></li>
-                    <li><a href="/posts">Thoughts</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                    <li><a href="/CV">CV</a></li>
+                <ul class="nav-menu">
+                    <li class="nav-item"><a href="/info">Information</a></li>
+                    <li class="nav-item"><a href="/posts">Thoughts</a></li>
+                    <li class="nav-item"><a href="/contact">Contact</a></li>
+                    <li class="nav-item"><a href="/CV">CV</a></li>
                 </ul>
 
                 <div class="menu-icon">
@@ -53,6 +55,8 @@
             </section>
         </main>
     </div>
+    <script src="index.js"></script>
+
 </body>
 
 
