about section first part

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
-    
+
 </head>
 
 <body>
@@ -21,7 +21,7 @@
             </a>
             <nav>
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="/info">Information</a></li>
+                    <li class="nav-item"><a href="/info">About Me</a></li>
                     <li class="nav-item"><a href="/posts">Thoughts</a></li>
                     <li class="nav-item"><a href="/contact">Contact</a></li>
                     <li class="nav-item"><a href="/CV">CV</a></li>
@@ -52,6 +52,19 @@
                 <a href="/info" class="button">
                     More Info
                 </a>
+            </section>
+            <section>
+                <h1 class="title">About Me</h1>
+                <h2>How it started</h2>
+                <p>My passion for software engineering blossomed in middle school when I struggled to find a note-taking
+                    app that suited my needs.<br/> Existing apps were either overloaded with features or targeted towards
+                    business users. This frustration sparked a desire to create my own, user-friendly apps.<br/> Intrigued by
+                    how these applications functioned, I delved into the world of software development.<br/> Determined to
+                    understand the intricacies of coding, I began learning programming fundamentals alongside my
+                    demanding high school curriculum.<br/> The more I learned about software development, the more fascinated
+                    I became by its potential to solve problems and create innovative solutions.<br/> It became increasingly
+                    clear that computer engineering was the perfect path to bring my programming aspirations to life.
+                </p>
             </section>
         </main>
     </div>
